fixed pallet spacing

--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -149,7 +149,6 @@ button {
 }
 
 .half-circle-wrapper {
-  width: 10%;
   position: relative;
   top: 8vh;
   z-index: 2;
